--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,75 @@
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
         <activity
+            android:name=".quiz23"
+            android:exported="false" />
+        <activity
+            android:name=".quiz22"
+            android:exported="false" />
+        <activity
+            android:name=".quiz21"
+            android:exported="false" />
+        <activity
+            android:name=".quiz20"
+            android:exported="false" />
+        <activity
+            android:name=".quiz19"
+            android:exported="false" />
+        <activity
+            android:name=".quiz18"
+            android:exported="false" />
+        <activity
+            android:name=".quiz17"
+            android:exported="false" />
+        <activity
+            android:name=".quiz16"
+            android:exported="false" />
+        <activity
+            android:name=".quiz15"
+            android:exported="false" />
+        <activity
+            android:name=".quiz14"
+            android:exported="false" />
+        <activity
+            android:name=".quiz13"
+            android:exported="false" />
+        <activity
+            android:name=".quiz12"
+            android:exported="false" />
+        <activity
+            android:name=".quiz11"
+            android:exported="false" />
+        <activity
+            android:name=".quiz10"
+            android:exported="false" />
+        <activity
+            android:name=".quiz9"
+            android:exported="false" />
+        <activity
+            android:name=".quiz8"
+            android:exported="false" />
+        <activity
+            android:name=".quiz7"
+            android:exported="false" />
+        <activity
+            android:name=".quiz6"
+            android:exported="false" />
+        <activity
+            android:name=".quiz5"
+            android:exported="false" />
+        <activity
+            android:name=".quiz4"
+            android:exported="false" />
+        <activity
+            android:name=".quiz3"
+            android:exported="false" />
+        <activity
+            android:name=".quiz2"
+            android:exported="false" />
+        <activity
+            android:name=".quiz1"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
