--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,87 @@
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
         <activity
+            android:name=".screen27"
+            android:exported="false" />
+        <activity
+            android:name=".screen26"
+            android:exported="false" />
+        <activity
+            android:name=".screen25"
+            android:exported="false" />
+        <activity
+            android:name=".screen24"
+            android:exported="false" />
+        <activity
+            android:name=".screen23"
+            android:exported="false" />
+        <activity
+            android:name=".screen22"
+            android:exported="false" />
+        <activity
+            android:name=".screen21"
+            android:exported="false" />
+        <activity
+            android:name=".screen20"
+            android:exported="false" />
+        <activity
+            android:name=".screen19"
+            android:exported="false" />
+        <activity
+            android:name=".screen18"
+            android:exported="false" />
+        <activity
+            android:name=".screen17"
+            android:exported="false" />
+        <activity
+            android:name=".screen16"
+            android:exported="false" />
+        <activity
+            android:name=".screen15"
+            android:exported="false" />
+        <activity
+            android:name=".screen14"
+            android:exported="false" />
+        <activity
+            android:name=".screen13"
+            android:exported="false" />
+        <activity
+            android:name=".screen12"
+            android:exported="false" />
+        <activity
+            android:name=".screen11"
+            android:exported="false" />
+        <activity
+            android:name=".screen10"
+            android:exported="false" />
+        <activity
+            android:name=".screen9"
+            android:exported="false" />
+        <activity
+            android:name=".screen8"
+            android:exported="false" />
+        <activity
+            android:name=".screen7"
+            android:exported="false" />
+        <activity
+            android:name=".screen6"
+            android:exported="false" />
+        <activity
+            android:name=".screen5"
+            android:exported="false" />
+        <activity
+            android:name=".screen4"
+            android:exported="false" />
+        <activity
+            android:name=".screen3"
+            android:exported="false" />
+        <activity
+            android:name=".screen2"
+            android:exported="false" />
+        <activity
+            android:name=".screen1"
+            android:exported="false" />
+        <activity
             android:name=".quiz23"
             android:exported="false" />
         <activity
