--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
         <activity
+            android:name=".signup"
+            android:exported="false" />
+        <activity
+            android:name=".favorite"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Menu"
             android:exported="false" />
         <activity
@@ -22,15 +34,7 @@
             android:exported="false" />
         <activity
             android:name=".screen25"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
-
+            android:exported="false" />
         <activity
             android:name=".screen24"
             android:exported="false" />
@@ -64,7 +68,6 @@
         <activity
             android:name=".screen14"
             android:exported="false" />
-
         <activity
             android:name=".screen13"
             android:exported="false" />
@@ -101,14 +104,12 @@
         <activity
             android:name=".screen2"
             android:exported="false" />
-
-    <activity
+        <activity
             android:name=".screen1"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
