--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,10 +14,11 @@
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
         <activity
-            android:name=".signup"
-            android:exported="false" />
+            android:name=".att2"
+            android:exported="false"/>
+
         <activity
-            android:name=".favorite"
+            android:name=".imageTest"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".signup"
+            android:exported="false" />
+        <activity
+            android:name=".favorite"
+            android:exported="false" />
         <activity
             android:name=".Menu"
             android:exported="false" />
