--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,27 @@
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
         <activity
-            android:name=".screen789"
-            android:exported="false"/>
+            android:name=".screen151617"
+            android:exported="false" />
         <activity
-            android:name=".SettingPage"
-            android:exported="true">
+            android:name=".screen111213"
+            android:exported="false" />
+        <activity
+            android:name=".screen345"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".screen789"
+            android:exported="false" />
+        <activity
+            android:name=".SettingPage"
+            android:exported="false"/>
         <activity
             android:name=".Menu"
             android:exported="false" />
@@ -103,7 +113,7 @@
             android:exported="false" />
         <activity
             android:name=".screen2"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".screen1"
             android:exported="false" />
