--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
-
+        <activity
+            android:name=".signup"
+            android:exported="false" />
         <activity
             android:name=".screen151617"
             android:exported="false" />
@@ -20,20 +22,13 @@
             android:exported="false" />
         <activity
             android:name=".screen345"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:exported="false" />
         <activity
             android:name=".screen789"
             android:exported="false" />
         <activity
             android:name=".SettingPage"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Menu"
             android:exported="false" />
@@ -121,6 +116,19 @@
         <activity
             android:name=".Home"
             android:exported="false" />
+        <activity
+            android:name=".WelcomeScreen"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
