--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,7 @@
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
         <activity
-            android:name=".Emergency"
-            android:exported="false" />
-        <activity
-            android:name=".Favourite"
+            android:name=".currency"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Emergency"
+            android:exported="false" />
+        <activity
+            android:name=".Favourite"
+            android:exported="false"/>
+
         <activity
             android:name=".signup"
             android:exported="false" />
