--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,11 +16,19 @@
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
         <activity
+            android:name=".videoMain"
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDpQM7U5AUsI8-1scORRRP8IFtqdkZd4Tc" />
+
+        <activity
             android:name=".map"
             android:exported="false" />
         <activity
             android:name=".all"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".safari"
             android:exported="false" />
@@ -73,7 +85,7 @@
             android:exported="false" />
         <activity
             android:name=".caudanwaterfront"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".currency"
             android:exported="false" />
@@ -118,11 +130,10 @@
             android:exported="false" />
         <activity
             android:name=".screen25"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".screen24"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".screen23"
             android:exported="false" />
