--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.MauHolidays"
         tools:targetApi="31">
         <activity
+            android:name=".all_club"
+            android:exported="false" />
+        <activity
+            android:name=".club_shot"
+            android:exported="false" />
+        <activity
             android:name=".club_kenzi"
             android:exported="false" />
         <activity
